# mm_api

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml
.github/workflows/: tests.yml
.zed/: tasks.json
deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
mm_api/: __init__.py  __main__.py  conftest.py  gunicorn_runner.py  log.py  seed.py  settings.py
mm_api/db/: base.py  utils.py
mm_api/db/dao/: bird_dao.py  dummy_dao.py  falconer_dao.py  feeding_dao.py  hunt_dao.py  training_dao.py  weight_dao.py
mm_api/db/migrations/: env.py
mm_api/db/migrations/versions/: 2024-06-29-14-18_ac3e9575be91.py
mm_api/db/models/: __init__.py  bird_model.py  dummy_model.py  falconer_model.py  feeding_model.py  hunt_model.py  training_model.py  weight_model.py
mm_api/schema/: bird.py  falconer.py  feeding.py  hunt.py  training.py  weight.py
mm_api/services/: __init__.py
mm_api/services/redis/: lifetime.py
mm_api/tests/: __init__.py  test_bird.py  test_dummy.py  test_falconer.py  test_feeding.py  test_hunt.py  test_training.py  test_weight.py
mm_api/tests/utils/: birds.py  dependency_overrides.py  generations.py
mm_api/web/: __init__.py  application.py  dependencies.py  lifetime.py
mm_api/web/api/: __init__.py  bird.py  falconer.py  feeding.py  hunt.py  router.py  training.py  weight.py
mm_api/web/api/dummy/: __init__.py  views.py
mm_api/web/api/echo/: __init__.py  views.py
mm_api/web/api/monitoring/: __init__.py
mm_api/web/api/redis/: __init__.py  views.py
mm_api/web/utils/: token.py
